Fixed Footer flickering

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -11,7 +11,6 @@
   justify-content: center;
   align-items: center;
   margin-right: 35%;
-  content: 10%
 }
 
 .q-tab-right {
@@ -38,8 +37,7 @@
   margin: 0 auto;
   text-align: center;
   font-size: larger;
-
-  max-height: max-content;
+  max-width: 50%;
 }
 
 
@@ -90,7 +88,22 @@ h6 {
 }
 .q-layout {
   box-sizing: border-box;
+  max-width: 100%;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #f2f2f2;
+  padding: 0.2%;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+
 
 
 
